--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_receiver">Receiver</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="clear">Clear</string>
     <string name="send">Send</string>
@@ -12,5 +12,6 @@
     <string name="add">Add</string>
     <string name="remove">Remove</string>
     <string name="replace">Replace</string>
-    <string name="stack">add to Back Stack</string>
+    <string name="wait">wait</string>
+    <string name="connect">connect</string>
 </resources>
