--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="add">Add</string>
     <string name="remove">Remove</string>
     <string name="replace">Replace</string>
-    <string name="wait">wait</string>
-    <string name="connect">connect</string>
+    <string name="wait">Wait</string>
+    <string name="connect">Connect</string>
+
 </resources>
