--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="replace">Replace</string>
     <string name="wait">Wait</string>
     <string name="update">Update</string>
+    <string name="load">Wait, Loading</string>
 
 </resources>
